--- a/index.html
+++ b/index.html
@@ -9,9 +9,34 @@
     <title>Photo Gallery</title>
 </head>
 <body>
-    <div class="container">
-        
-    </div>
+    <nav class="navbar_c">
+      <div class="mast">
+        <div class="logo">
+          <a class="navbar-brand" href="#">
+            <h3>
+              <img src="logo.png" alt="" width="60" class="d-inline-block align-text-top">
+              Image Gallery
+            </h3>
+          </a>
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="stb">
+          <button class="stb" role="button" onclick="botm()">
+            <h3>
+              Scroll to bottom
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                <path
+                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+              </svg>
+            </h3>
+          </button>
+        </div>
+      </div>
+    </nav>
     <script src="scripts.js"></script>
-</body>
+  </body>
 </html>
