--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         </div>
       </div>
     </nav>
+
+    <div class="container">
+        <div id="my-container" style="display: flex; flex-wrap: wrap;">
+        </div>
+    </div>    
+
     <script src="scripts.js"></script>
   </body>
 </html>
